--- a/20th-project/Style.css
+++ b/20th-project/Style.css
@@ -1,5 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Kalnia:wght@300&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Kalnia', serif;
+}
+body {
+    height: 100vh;
+    width: 100%;
+}
+.icon-image {
+    position: relative;
+    height: 70px;
+    width: 70px;
+}
+.icon-image img {
+    position: absolute;
+    height: 95%;
+    width: 95%;
+    left: 0;
+    top: 0;
 }
